--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <div class="row py-4">
+    <div class="row py-4 m-10">
       <div id="app">
         <h1>WhatsApp API Link Generator</h1>
         <div class="row py-4">
