--- a/gettoken.html
+++ b/gettoken.html
@@ -28,7 +28,7 @@
             <h1>Get Code</h1>
             <div class="container">
                 <div class="row">
-                    <a name="" id="home" class="btn btn-primary" href="http://127.0.0.1:8080/gettoken.html" role="button">Home</a>
+                    <a name="" id="home" class="btn btn-primary" href="https://jorgemerchan.github.io/gettoken.html" role="button">Home</a>
                 </div>
                 <form>
                     <div class="form-group row">
