--- a/gettoken.html
+++ b/gettoken.html
@@ -131,11 +131,14 @@
         var code = '';
 
         function load() {
-            document.getElementById("client_id").value = client_id;
-            document.getElementById("client_secret").value = client_secret;
-            document.getElementById("redirect_uri").value = redirect_uri;
-            document.getElementById("response_type").value = response_type;
-            document.getElementById("state").value = state;
+            document.getElementById("auth_url").value = sessionStorage.getItem('auth_url') || auth_url;
+            document.getElementById("token_url").value = sessionStorage.getItem('token_url') || token_url;
+            document.getElementById("client_id").value = sessionStorage.getItem('client_id') || client_id;
+            document.getElementById("client_secret").value = sessionStorage.getItem('client_secret') || client_secret;
+            document.getElementById("redirect_uri").value = sessionStorage.getItem('redirect_uri') || redirect_uri;
+            document.getElementById("response_type").value = sessionStorage.getItem('response_type') || response_type;
+            document.getElementById("state").value = sessionStorage.getItem('client_id') || state;
+            document.getElementById("scope").value = sessionStorage.getItem('scope') || scope;
 
             const urlParams = new URLSearchParams(window.location.search);
             const code = urlParams.get('code');
