--- a/gettoken.html
+++ b/gettoken.html
@@ -146,7 +146,7 @@
                 sessionStorage.setItem('code', code);
                 window.location = sessionStorage.getItem('redirect_uri');
             } else {
-                code = sessionStorage.getItem('code');
+                code = sessionStorage.getItem('code') || null;
                 if (code) {
                     document.getElementById("code").value = code;
                 }
