--- a/gettoken.html
+++ b/gettoken.html
@@ -208,6 +208,7 @@
 
                 xmlhttp.open("POST", token_url);
                 xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+                xmlhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
                 xmlhttp.send(formData);
 
             } else {
