--- a/contizacion.html
+++ b/contizacion.html
@@ -145,7 +145,7 @@
         };
         const stopNotifications = () => {
             console.log('Stop of Notifications');
-            window.clearTimeout(timer);
+            clearTimeout(timer);
         };
 
         const changeLimit = () => {
