--- a/cotizacion.html
+++ b/cotizacion.html
@@ -140,12 +140,12 @@
 
         const startNotifications = () => { //60s
             console.log('Start of Notifications');
-            let duracion = parseInt(prompt("Duración: ", time));
-            timer = setTimeout(getCotizacion, duracion * 1000);
+            let duracion = parseInt(prompt("Duración: ", time)) * 1000;
+            timer = window.setTimeout(getCotizacion, duracion);
         };
         const stopNotifications = () => {
             console.log('Stop of Notifications');
-            clearTimeout(timer);
+            window.clearTimeout(timer);
         };
 
         const changeLimit = () => {
@@ -154,6 +154,11 @@
         }
         const getCotizacion = () => {
             var xmlhttp = new XMLHttpRequest();
+            xmlhttp.open("GET", 'https://be.buenbit.com/api/market/tickers/', true);
+            xmlhttp.setRequestHeader( 'Access-Control-Allow-Origin', 'http://127.0.0.1:5500' );
+            xmlhttp.setRequestHeader( 'Access-Control-Allow-Methods', 'GET' );
+            xmlhttp.withCredentials = true;
+              
             xmlhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     var myJSON = JSON.parse(this.responseText);
@@ -161,7 +166,6 @@
                     calcular(myJSON);
                 }
             }
-            xmlhttp.open("GET", 'https://be.buenbit.com/api/market/tickers/', true);
             xmlhttp.send();
         };
         const calcular = (json) => {
